# frappe-better-numerical-controls

./: MANIFEST.in  README.md  pyproject.toml  setup.py
frappe_better_numerical_controls/: __init__.py  hooks.py  modules.txt
frappe_better_numerical_controls/config/: desktop.py  docs.py
frappe_better_numerical_controls/frappe_better_numerical_controls/: __init__.py
frappe_better_numerical_controls/public/: build.json
frappe_better_numerical_controls/public/js/: better_float.bundle.js  better_float_v13.bundle.js  better_int.bundle.js  better_int_v13.bundle.js
frappe_better_numerical_controls/public/js/utils/: check.js  index.js
